src/recipe/parser/snapshots/rattler_build__recipe__parser__about__test__invalid_license.snap
---
source: src/recipe/parser/about.rs
expression: err
---
  × Failed to parse recipe

Error: 
  × failed to parse SPDX license: invalid character(s)
  │ See <https://spdx.org/licenses> for the list of valid licenses.
  │ Use 'LicenseRef-<MyLicense>' if you are using a custom license.
   ╭─[7:22]
 6 │         about:
 7 │             license: MIT/X derivate
   ·                      ───────┬──────
   ·                             ╰── here
 8 │         
   ╰────
